<resources>
    <string name="app_name">Chat_app</string>
    <string name="welcome_back">welcome_back</string>
    <string name="login_to_continue">login to continue</string>
    <string name="enter_you_email">enter you email</string>
    <string name="enter_you_password">enter you password</string>
    <string name="sign_in">sign in</string>
    <string name="create_new_account">create new account</string>
    <string name="add_image">add image</string>
    <string name="enter_your_name">enter your name</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign UP</string>
    <string name="Unable_to_sign_in">Unable to sign in</string>
    <string name="token_updated_successfully">Token Updated successfully</string>
    <string name="Sign_out_successful">Sign Out Successful</string>
    <string name="select_image">Select Image</string>
    <string name="No_User_available">No User available</string>
    <string name="online">Online</string>
    <string name="error">Error</string>
    <string name="Notification_sent_successfully">Notification sent successfully</string>
</resources>