<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="#216A4A"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:hint="@string/enter_you_email"
            android:textColorHint="#605D5D"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:textColorHint="#605D5D"
            android:hint="@string/enter_you_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"

            />

<FrameLayout
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_SignIn"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp" />

</FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account"
            android:textStyle="bold"
            android:textColor="@color/primary"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:text="@string/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

</ScrollView>